[package]
name = "salusa_math"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
num = "0.4.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"
rand = {version = "0.8.0", features = ["getrandom"]}
rand_core = {version = "0.6.0", features = ["getrandom"]}
salusa_math_macros = { path = "../salusa_math_macros" }